# liblastlog2

./: AUTHORS  README.md  config.h.in  configure.ac
patches/: pam-1.1.8-lastlog2.patch  util-linux-lastlog2.patch
src/: Makefile  README  backend.c  backend.h  bck-lastlog2.c  bck-lastlog2.h  lastlog.c  lastlog2.c  lastlog2.h
src/modules/: lastlog.c
src/test/: Makefile  test  test.c
